# reservoirpy

./: .gitignore  404.html  README.md  index.html  main.py  mkdocs.yml  objects.inv  pyproject.toml  setup.py
.github/workflows/: deploy-docs.yml
.lingma/rules/: develop_rule.md
api/API文档/: index.html
config/: default_config.yaml
dataset_test/: configs.json  data.npz  metadata.json
design/adding_new_models/: index.html
design/architecture_design/: index.html
docs/: getting-started.md  index.md
docs/api/: API文档.md
docs/design/: adding_new_models.md  architecture_design.md
docs/examples/: index.md  single-phase.md  two-phase-waterflood.md
docs/theory/: fvm.md  impes.md  index.md  single-phase-walkthrough.md  single-phase.md  two-phase.md  well-model.md  有限体积法.md  物理属性模块重构设计方案.md
docs/tutorials/: BENCHMARK.md  TUTORIAL.md  常见问题：六面体顶点顺序.md  数值模拟流程.md  算例详细讲解.md  项目使用指南.md
examples/: basical.py  compare_coo_vs_lil.py  heterogeneous_64x64.py  index.html  jax_multiresolution.py  jax_single_phase_64x64.py  single_phase.ipynb  single_phase.py  test_backward_compatibility.py  test_new_architecture.py  two_phase_waterflood.py
examples/five-point-pattern/: index.html
examples/results/: simulation_results.vtk
examples/single-phase/: index.html
examples/two-phase-waterflood/: index.html
getting-started/: index.html
javascripts/: mathjax.js
reference/SUMMARY/: index.html
reference/reservoirpy/: index.html
scripts/: deploy.sh  download_data.py  example_parallel_two_phase.py  gen_ref_nav.py  generate_cpu_multires_data.py  generate_dataset.py  generate_jax_multires_data.py  generate_jax_twophase_data.py  generate_training_data.py  generate_twophase_data.py  test_impes.py  test_impes_waterflood.py  verify_dataset.py  verify_env.py  verify_oss_data.py  visualize_training.py  visualize_well_patterns.py
search/: search_index.json
src/reservoirpy/: __init__.py  api.py  main.py
tests/: test_geostatistics.py  test_jax_single_phase.py  test_linear_solver.py  test_mesh.py  test_models.py  test_physics.py  test_simulator.py  test_two_phase.py  test_well_model.py
theory/: index.html
theory/fvm/: index.html
theory/impes/: index.html
theory/single-phase/: index.html
theory/single-phase-walkthrough/: index.html
theory/two-phase/: index.html
theory/well-model/: index.html
theory/有限体积法/: index.html
theory/物理属性模块重构设计方案/: index.html
tutorials/BENCHMARK/: index.html
(+82 files in other folders)
