[project]
name = "reservoirpy"
version = "0.1.0"
description = "Lightweight reservoir simulator"
readme = "README.md"
authors = [{ name = "Zhenglong Chen", email = "chenzhenglomg0514@163.com" }]
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "pyyaml>=6.0.2",
    "pyvista>=0.46.3",
    "pandas>=2.3.2",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "jupyter",
]

[tool.setuptools.packages.find]
where = ["src"]
